# LabViewThermodynamics

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt
src/: lvt.h
src/impl/: lvt.cc  lvt_internal.h
src/impl/backend/: lvt_naive.cc  lvt_naive.h
tests/: test_plate_2d.cc  test_plate_2d_radiation.cc  test_rod_1d.cc
